<resources>
    <string name="app_name">CanTestTool</string>
    <string name="txt_receive_box">receive box</string>
    <string name="txt_setmaskfilter">setMaskFilter</string>
    <string name="txt_clearresult">clearResult</string>
    <string name="txt_senddata">sendData</string>
    <string name="txt_is_callback_mode">is callback mode</string>
    <string name="txt_opencan">openCan</string>
    <string name="txt_can_port">can port</string>
    <string name="txt_0">0</string>
    <string name="txt_can_baudrate">can baudrate</string>
    <string name="txt_can_id">can id (Hex)</string>
    <string name="hint_4">4</string>
    <string name="txt_can_data">can data (Hex)</string>
    <string name="hint_ff_0d_0c_ec">FF 0D 0C EC FF 0D 0C EC</string>
    <string name="txt_is_extended">is extended</string>
    <string name="txt_is_remote">is remote</string>
    <string name="txt_filterid1">filterId1 (Hex)</string>
    <string name="hint_1">1</string>
    <string name="txt_filterid2">filterId2 (Hex)</string>
    <string name="txt_mask2">mask2 (Hex)</string>
    <string name="txt_mask1">mask1 (Hex)</string>
    <string name="txt_setmask">setMask</string>
    <string name="txt_filterid">filterId (Hex)</string>
    <string name="txt_setmaskfilter_box">setMaskFilter box</string>
    <string name="txt_removemask">removeMask</string>
    <string name="txt_resetmask">resetMask</string>
    <string name="txt_getmask">getMask</string>
    <string name="hint_result">result</string>
    <string name="hint_0x7ff">7FF</string>
    <string name="hint_123">13</string>
    <string name="item_title_canid">canId</string>
    <string name="item_title_len">len</string>
    <string name="item_title_data">data</string>
    <string name="item_title_is_extended">extend</string>
    <string name="item_title_is_remote">remote</string>
    <string name="title_filter_id">filter id</string>
    <string name="title_mask">mask</string>
</resources>