<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MaskFilterActivity">

    <LinearLayout
        android:layout_margin="8dp"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:orientation="vertical"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="match_parent">

            <TextView style="@style/TitleTextViewStyle"
                android:gravity="center"
                android:text="@string/txt_setmaskfilter_box" />

            <TableRow style="@style/TableRowStyle">
                <TextView style="@style/ItemTextViewTitle"
                    android:text="@string/txt_filterid1" />

                <EditText style="@style/EditTextStyle"
                    android:id="@+id/filterId1_edt"
                    android:hint="@string/hint_123"/>
            </TableRow>

            <TableRow style="@style/TableRowStyle">
                <TextView style="@style/ItemTextViewTitle"
                    android:text="@string/txt_mask1" />

                <EditText style="@style/EditTextStyle"
                    android:id="@+id/mask1_edt"
                    android:digits="0123456789ABCDEF"
                    android:inputType="textNoSuggestions|textCapCharacters"
                    android:hint="@string/hint_0x7ff"/>
            </TableRow>

            <TableRow style="@style/TableRowStyle">
                <TextView style="@style/ItemTextViewTitle"
                    android:text="@string/txt_filterid2" />

                <EditText style="@style/EditTextStyle"
                    android:id="@+id/filterId2_edt" />
            </TableRow>

            <TableRow style="@style/TableRowStyle">
                <TextView style="@style/ItemTextViewTitle"
                    android:text="@string/txt_mask2" />

                <EditText style="@style/EditTextStyle"
                    android:id="@+id/mask2_edt"
                    android:digits="0123456789ABCDEF"
                    android:inputType="textNoSuggestions|textCapCharacters" />
            </TableRow>

            <Button style="@style/ButtonStyle"
                android:id="@+id/set_tv"
                android:text="@string/txt_setmask" />

            <TableRow style="@style/TableRowStyle">
                <TextView style="@style/ItemTextViewTitle"
                    android:text="@string/txt_filterid" />

                <EditText style="@style/EditTextStyle"
                    android:id="@+id/filterId_edt"/>
            </TableRow>

            <TableRow style="@style/TableRowStyle">
                <Button style="@style/ButtonStyle"
                    android:id="@+id/get_tv"
                    android:text="@string/txt_getmask"
                    android:layout_weight="1"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"/>

                <View style="@style/ViewStyle" />

                <TextView style="@style/ItemTextViewTitle"
                    android:id="@+id/mask_result_tv"
                    android:hint="@string/hint_result" />
            </TableRow>

            <Button style="@style/ButtonStyle"
                android:id="@+id/remove_tv"
                android:text="@string/txt_removemask" />
            <Button style="@style/ButtonStyle"
                android:id="@+id/reset_tv"
                android:text="@string/txt_resetmask" />

        </LinearLayout>

        <View
            android:background="@color/black"
            android:layout_margin="8dp"
            android:layout_width="1dp"
            android:layout_height="match_parent" />

        <LinearLayout
            android:orientation="vertical"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="match_parent">

            <TextView style="@style/TitleTextViewStyle"
                android:gravity="center"
                android:text="maskFilterResult box" />

            <ListView
                android:id="@+id/mask_result_list_lv"
                android:layout_margin="4dp"
                android:layout_weight="8"
                android:layout_width="match_parent"
                android:layout_height="0dp" />
        </LinearLayout>
    </LinearLayout>

</LinearLayout>