<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="horizontal"
    android:layout_width="match_parent"
    android:layout_height="48dp">

    <TextView
        android:text="@string/item_title_canid"
        android:gravity="center_vertical"
        android:textSize="14sp"
        android:textColor="@color/black"
        android:layout_weight="1.5"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        tools:ignore="RtlHardcoded" />

    <TextView
        android:text="@string/item_title_len"
        android:gravity="center_vertical"
        android:textSize="14sp"
        android:textColor="@color/black"
        android:layout_weight="0.5"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        tools:ignore="RtlHardcoded" />

    <TextView
        android:text="@string/item_title_data"
        android:gravity="center_vertical"
        android:textSize="14sp"
        android:textColor="@color/black"
        android:layout_weight="3"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        tools:ignore="RtlHardcoded" />

    <TextView
        android:text="@string/item_title_is_extended"
        android:gravity="center_vertical"
        android:textSize="14sp"
        android:textColor="@color/black"
        android:layout_weight="1"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        tools:ignore="RtlHardcoded" />

    <TextView
        android:text="@string/item_title_is_remote"
        android:gravity="center_vertical"
        android:textSize="14sp"
        android:textColor="@color/black"
        android:layout_weight="1"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        tools:ignore="RtlHardcoded" />

</LinearLayout>